# daily_light

./: README.md  auth_setup.py  intro_layer_herontwerp.md  pyproject.toml  start_gui.bat
docs/: herontwerp-single-image.md  intro_ontwerp.md
input/: Spurgeon_clean.txt  daily.txt
scripts/: clean_daily_txt.py  generate_hook_from_input.py
spurgeon/: auth_setup.py  cli.py  gui.py  models.py
spurgeon/config/: settings.py
spurgeon/core/: gpt5_client.py  parser.py  pipeline.py  segmenter.py  time_chunker.py
spurgeon/services/alignment/: rev_aligner.py
spurgeon/services/hook/: generate_onscreen_hook.py  generate_spoken_hook.py
spurgeon/services/image_gen/: image_generator.py  watercolor.txt
spurgeon/services/intro/: generate_credit_line.py  generate_spoken_hook.py  hook_judge_scorecard.py  hook_selector.py
spurgeon/services/prompt_generation/: __init__.py  banned_patterns.txt  cli.py  domain.py  forbidden_style_terms.txt  gateway.py  pipeline.py  policy.py  prompt_generator.py  prompt_system.txt  stage_subject.txt  templates.py  test_input.txt
spurgeon/services/subtitles/: builder.py  caption_models.py  io.py  merger.py  tokenizer.py
spurgeon/services/thumbnail/: THUMBNAIL_LAYER_REDESIGN.md  __init__.py  generate_thumbnail_text.py  thumbnail_adapters.py  thumbnail_contracts.py  thumbnail_errors.py  thumbnail_generator.py  thumbnail_intent_card.py  thumbnail_layout.py  thumbnail_observability.py  thumbnail_prompting.py  thumbnail_quality.py
spurgeon/tests/: test_parser.py
spurgeon/utils/: gcs_uploader.py  logging_setup.py  retry_utils.py
(+21 files in other folders)
