# pyproject.toml

[tool.poetry]
name = "spurgeon"
version = "0.1.0"
description = "Automatische pipeline voor het omzetten van dagelijkse overdenkingen naar video’s"
authors = ["Johan <jfdenboer@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "spurgeon" }]

[tool.poetry.dependencies]
python = ">=3.11.9,<4.0"
typer = ">=0.16.0,<0.17.0"
pydantic = ">=2.11.5,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
openai = "^2.5.0"
elevenlabs = ">=2.3.0,<3.0.0"
google-cloud-storage = ">=3.1.0,<4.0.0"
requests = ">=2.32.4,<3.0.0"
ffmpeg-python = ">=0.2.0,<0.3.0"
moviepy = ">=2.2.1,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
google-auth = "^2.40.3"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.175.0"
pytz = "^2025.2"
yt-dlp = "^2025.3.10"

[tool.poetry.scripts]
spurgeon = "spurgeon.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
flake8 = "^7.2.0"
mypy = "^1.16.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
